# AdvanceTableWidget

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
custom-table/: CMakeLists.txt
custom-table/include/custom-table/: ACustomTable.h  ATableFilterWidget.h  ATableManager.h  ITableItem.h
custom-table/src/: ACustomTable.cpp  ATableFilterWidget.cpp  ATableManager.cpp  ITableItem.cpp
sample-project/: CMakeLists.txt
sample-project/include/: ItemGenerator.h  MainWindow.h  SampleItem.h
sample-project/res/: res.qrc  style.qss
sample-project/src/: ItemGenerator.cpp  ItemGenerator.cpp.autosave  MainWindow.cpp  MainWindow.ui  SampleItem.cpp
